samples/_failures_safe/1761043030_1f59c9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b0e6c190.c: In function ‘get_next_token’:
./samples/SAFE/__tmp_b0e6c190.c:157:9: error: expected declaration or statement at end of input
  157 |         }
      |         ^
./samples/SAFE/__tmp_b0e6c190.c:157:9: error: expected declaration or statement at end of input
